<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuardianDashboard">


    <FrameLayout
        android:id="@+id/fl_anim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/guard_dash" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/track_your_kids_activity_here"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="15sp"
            android:textStyle="bold" />

    </FrameLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fl_anim"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="50dp"
        tools:itemCount="5"
        tools:listitem="@layout/layout_parcels" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:background="@drawable/custom_button"
            android:minHeight="40dp"
            android:textAllCaps="false"
            android:text="@string/logout" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_delete"
            android:textAllCaps="false"
            android:minHeight="40dp"
            android:text="@string/remove_all" />
    </LinearLayout>


</RelativeLayout>